updated settings for live pull

--- a/data/regular_settings.json
+++ b/data/regular_settings.json
@@ -1,17 +1,24 @@
 {
-    "horizon": 5,
-    "ft_value": 1.5,
-    "itb_value": 0.08,
+    "horizon": 6,
+    "ft_value": 1.25,
+    "itb_value": 0.15,
+    "decay_base": 0.85,
     "no_future_transfer": false,
-    "no_transfer_last_gws": 2,
-    "randomized": false,
+    "no_transfer_last_gws": 0,
+    "randomized": true,
     "xmin_lb": 2,
     "ev_per_price_cutoff": 20,
+    "bench_weights": {
+        "0": 0.03,
+        "1": 0.21,
+        "2": 0.06,
+        "3": 0.003
+    },
     "banned": [],
     "locked": [],
     "keep": [],
     "delete_tmp": true,
-    "single_solve": true,
+    "single_solve": false,
     "secs": 300,
     "gap": 0,
     "use_cmd": true,
@@ -20,23 +27,43 @@
     "use_wc": null,
     "use_bb": null,
     "use_fh": null,
-    "chip_limits": {"bb": 0, "wc": 0, "fh": 0, "tc": 0},
+    "chip_limits": {
+        "bb": 1,
+        "wc": 0,
+        "fh": 0,
+        "tc": 0
+    },
     "no_chip_gws": [],
-    "allowed_chip_gws": {"bb": [], "wc": [], "fh": [], "tc": []},
-    "future_transfer_limit": null,
+    "allowed_chip_gws": {
+        "bb": [],
+        "wc": [],
+        "fh": [],
+        "tc": []
+    },
+    "future_transfer_limit": 2,
     "no_transfer_gws": [],
     "booked_transfers": [],
     "preseason": false,
-    "use_login": false,
-    "cbc_path": "",
+    "use_login": true,
+    "cbc_path": "D:\\devel\\epl\\FPL-Optimization-Tools\\solver\\cbc\\bin",
     "no_opposing_play": false,
-    "pick_prices": {"G": "", "D": "", "M": "", "F": ""},
+    "pick_prices": {
+        "G": "",
+        "D": "",
+        "M": "",
+        "F": ""
+    },
     "no_gk_rotation_after": null,
-    "iteration": 1,
+    "iteration": 6,
     "iteration_criteria": "this_gw_transfer_in",
-    "datasource" : "review",
-    "data_weights": {"review": 40, "review-odds": 30, "mikkel": 30, "kiwi": 0},
-    "export_data": "final.csv",
+    "datasource": "mixed",
+    "data_weights": {
+        "review": 75,
+        "review-odds": 25,
+        "mikkel": 0,
+        "kiwi": 0
+    },
+    "export_data": "mixed.csv",
     "team_data": "json",
-    "team_id": null
+    "team_id": 3343698
 }
