--- a/data/regular_settings.json
+++ b/data/regular_settings.json
@@ -25,7 +25,7 @@
     "num_transfers": null,
     "hit_limit": null,
     "use_wc": null,
-    "use_bb": null,
+    "use_bb": 34,
     "use_fh": null,
     "chip_limits": {
         "bb": 1,
@@ -40,7 +40,7 @@
         "fh": [],
         "tc": []
     },
-    "future_transfer_limit": 2,
+    "future_transfer_limit": null,
     "no_transfer_gws": [],
     "booked_transfers": [],
     "preseason": false,
